--- a/config.cfg
+++ b/config.cfg
@@ -1,15 +1,15 @@
 DEBUG=False
 
-#SQLALCHEMY_DATABASE_URI='mysql://root:Ironman@localhost/parenteye'
-#SQLALCHEMY_BINDS = {
-#    'slave':        'mysql://root:Ironman@localhost/parenteye'
-#}
-#SQLALCHEMY_TRACK_MODIFICATIONS=True
+SQLALCHEMY_DATABASE_URI='mysql://root:Ironman@localhost/chat_site'
+# SQLALCHEMY_BINDS = {
+#    'slave':        'mysql://root:Ironman@localhost/chat_site'
+# }
+SQLALCHEMY_TRACK_MODIFICATIONS=True
 
 # bellow line True will show all sql queries terminal
-#SQLALCHEMY_ECHO=False
-#SQLALCHEMY_POOL_SIZE=15
-#SEND_FILE_MAX_AGE_DEFAULT=43200
+SQLALCHEMY_ECHO=False
+SQLALCHEMY_POOL_SIZE=15
+SEND_FILE_MAX_AGE_DEFAULT=43200
 
 # for encrypting the cookies and tokens
-SECRET_KEY = 'My_secret_key'
+SECRET_KEY = 'My_secret_keysssss'
