--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,6 @@
 DEBUG=False
 
-SQLALCHEMY_DATABASE_URI='mysql://root:Ironman@localhost/chat_site'
-# SQLALCHEMY_BINDS = {
-#    'slave':        'mysql://root:Ironman@localhost/chat_site'
-# }
+SQLALCHEMY_DATABASE_URI='mysql+mysqlconnector://root:Ironman@localhost/chat_site'
 SQLALCHEMY_TRACK_MODIFICATIONS=True
 
 # bellow line True will show all sql queries terminal
