--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,4 @@
-DEBUG=False
+DEBUG=True
 
 SQLALCHEMY_DATABASE_URI='mysql+mysqlconnector://root:Ironman@localhost/chat_site'
 SQLALCHEMY_TRACK_MODIFICATIONS=True
