Updated small thing

--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,4 @@
-DEBUG=False
+DEBUG=True
 
 SQLALCHEMY_DATABASE_URI='mysql+mysqlconnector://admin:123Ironman@tts-instance-1.cenkodn9w2b4.ap-south-1.rds.amazonaws.com/chat_site'
 SQLALCHEMY_TRACK_MODIFICATIONS=True
@@ -9,4 +9,5 @@ SQLALCHEMY_POOL_SIZE=15
 SEND_FILE_MAX_AGE_DEFAULT=43200
 
 # for encrypting the cookies and tokens
-SECRET_KEY = 'My_secret_keysssss'
+SECRET_KEY='My_secret_keysssss'
+SERVER_NAME='127.0.0.1:8080'
