--- a/config/config.cfg
+++ b/config/config.cfg
@@ -10,4 +10,4 @@ SEND_FILE_MAX_AGE_DEFAULT=43200
 
 # for encrypting the cookies and tokens
 SECRET_KEY='My_secret_keysssss'
-SERVER_NAME='127.0.0.1:8080'
+# SERVER_NAME='0.0.0.0:8080'
